# TRISK_CPU

./: CMakeLists.txt  README.md  TODO.txt  clean.sh  lm  lmr
sample_programs/: abs.tas  add_16_bit.tas  factorial.tasm  freq-divider.tasm  mult.tas  program.tas  simple_parameters.tas  simple_return.tas  strcmp.tas  strlen.tas  subroutines.tas  subtract.tas  swap.tas
src/assembler/: assembler.cpp
src/bin2logisim/: bin2logisim.cpp
src/emulator/: emulator.cpp
